date pipe gebruikt + npm ci

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Hoofdstuk 10 - Component interactie: verder bouwen aan de wereldlklok applicatie van hoofdstuk 09",
   "main": "index.js",
   "scripts": {
-    "start": "npm ci & concurrently \"cd Client & npm start\" \"cd Server & npm start\""
+    "start": "npm ci & concurrently \"cd Client & npm ci & npm start\" \"cd Server & npm ci & npm start\""
   },
   "keywords": [
     "UCLL",
