--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   "author": "David Urting",
   "license": "UNLICENSED",
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "9.1.2"
   }
 }
