--- a/Client/package.json
+++ b/Client/package.json
@@ -20,8 +20,7 @@
     "@angular/router": "^20.3.0",
     "moment-timezone": "^0.6.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^20.3.1",
